<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:columnCount="1"
    android:rowCount="2">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PurchaseTextView"
            android:id="@+id/purchaseTextView"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/purchaseEditText"
            android:layout_column="1"
            android:layout_row="0"
            android:maxLength="9"
            android:layout_gravity="top" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/purchaseDisplayTextView"
            android:layout_column="1"
            android:layout_row="0"
            android:background="@android:color/holo_blue_dark"
            android:layout_gravity="fill_horizontal|top"
            android:padding="@dimen/textview_padding"
            android:phoneNumber="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/down_payment"
            android:id="@+id/downPayTextView"
            android:layout_column="0"
            android:layout_row="1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/downPayEditText"
            android:layout_column="1"
            android:layout_row="1"
            android:maxLength="9"
            android:layout_gravity="top" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/downPayDisplayTextView"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|top"
            android:background="@android:color/holo_blue_dark"
            android:padding="@dimen/textview_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/interest_rate"
            android:id="@+id/interestTextView"
            android:layout_column="0"
            android:layout_row="2" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/interestEditText"
            android:layout_column="1"
            android:layout_row="2"
            android:maxLength="3"
            android:layout_gravity="top" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/interestDisplayTextView"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|top"
            android:background="@android:color/holo_blue_dark"
            android:padding="@dimen/textview_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/custom_duration"
            android:id="@+id/customTitleTextView"
            android:gravity="center_vertical|right"
            android:layout_row="3"
            android:layout_column="0" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/customSeekBar"
            android:max="100"
            android:indeterminate="false"
            android:progress="40"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="top"
            android:layout_columnSpan="1" />
    </GridLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView8"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="0dp"
                android:text="@string/ten_years" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView9"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="0dp"
                android:text="@string/twenty_years" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tenTextView"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/twentyTextView"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="4dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="0dp"
                android:text="@string/thirty_years" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/customTextView"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="0dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/thirtyTextView"
                android:layout_gravity="top|bottom|center"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/customPayTextView"
                android:layout_gravity="top|bottom|center"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp" />
        </LinearLayout>
    </LinearLayout>

</GridLayout>
